--- a/frontend/src/components/MenuPages/AnimeStats.css
+++ b/frontend/src/components/MenuPages/AnimeStats.css
@@ -125,3 +125,8 @@
     height: 100%;
     width: 80%;
 }
+
+.rating-pie-chart {
+    width: 100%;
+    height: 100%;
+}
